--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     </div>
                 </div>
                 <div class="offer__slider-wrapper">
+                  <div class="offer__slider-inner">
                     <div class="offer__slide">
                         <img src="img/slider/pepper.jpg" alt="pepper">
                     </div>
@@ -125,6 +126,7 @@
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
                     </div> 
+                  </div>
                 </div>
             </div>
         </div>
