--- a/index.html
+++ b/index.html
@@ -275,6 +275,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src='js/script.js'> </script>
+    <script src='js/bundle.js'> </script>
 </body>
 </html>
